...
    <string name="quantity_lbl">Quantity:</string>
    <string name="quantity_add_lbl">Quantity [kg]:</string>
    <string name="strength">Strength:</string>
    <string name="additional_information">Additional information:</string>
    <string name="reviews_btn">Reviews</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="submit">Submit</string>
    <string name="comment_hint">Please write your comment here.</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_filter_search">Filter &amp; Search</string>
    <string name="filter_btn">Filter</string>
    <string name="all_shops">All Shops</string>
    <string name="settings">Settings</string>
...
