...
                android:valueFrom="0"
                android:valueTo="10"
                android:layout_height="8dp"
                android:layout_width="match_parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comment_text_field"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:hint="@string/comment_hint" />

        <Button
            android:id="@+id/btn_comment_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:paddingBottom="15dp"/>

...
